Added Testerra test steps

--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -20,10 +20,37 @@ jobs:
           node-version: '20'
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
-#      - name: Build with Gradle
-#        run: ./gradlew build
-#        uses: gradle/gradle-build-action@v3
-#        with:
-#          arguments: chrome_headless --no-parallel --no-daemon --console=plain
+      - name: Build with Gradle
+        run: gradle clean compileJava compileTestJava buildReport
+      - name: Prepare Status Tests
+        run: |
+          VAR_currentStage=$STAGE_NAME
+          ./gradlew executeModuleTest \
+          -Pmodule=integration-tests \
+          -Pargs="-Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -Dtt.report.dir=report-pretest-status -DwithJacoco" \
+          -PtestName="PreTest Status" \
+          -PoutputDir="report-pretest-status"
+
+      - name: Prepare Report Tests 1
+        run: |
+          VAR_currentStage=$STAGE_NAME
+          ./gradlew executeModuleTest \
+            -Pmodule=report-ng-tests \
+            -Pargs="-Ppretest=true" \
+            -PtestName="PreTest ReportNG 1" \
+            -PoutputDir="/src/test/resources/reports/report-generated-status"
+
+      - name: Prepare Report Tests 2
+        run: |
+          VAR_currentStage=$STAGE_NAME
+          ./gradlew executeModuleTest \
+            -Pmodule=report-ng-tests \
+            -Pargs="-PpretestExtended=true" \
+            -PtestName="PreTest ReportNG 2" \
+            -PoutputDir="/src/test/resources/reports/report-extended-status"
+
+      - name: Run Tests
+        run: |
+          ./gradlew clean test
       - name: Last step
         run: echo "End of workflow!"
