--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build Testerra
         run: |
           ls -la
-          ./gradle clean compileJava compileTestJava buildReport
+          gradle clean compileJava compileTestJava buildReport
       - name: Prepare Status Tests
         run: |
           ./gradlew executeModuleTest \
