--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Build Testerra
         run: |
           ls -la
