Changed gradle commands

--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Prepare Status Tests
         run: |
           cd integration-tests
-          ./gradlew test -Pmodule=integration-tests \
+          gradle test -Pmodule=integration-tests \
           -Pargs="-Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -Dtt.report.dir=report-pretest-status -DwithJacoco" \
           -PtestName="PreTest Status" \
           -PoutputDir="report-pretest-status"
@@ -36,7 +36,7 @@ jobs:
 
       - name: Prepare Report Tests 1
         run: |
-          ./gradlew test -Pmodule=report-ng-tests \
+          gradle test -Pmodule=report-ng-tests \
             -Pargs="-Ppretest=true" \
             -PtestName="PreTest ReportNG 1" \
             -PoutputDir="/src/test/resources/reports/report-generated-status"
@@ -45,7 +45,7 @@ jobs:
 
       - name: Prepare Report Tests 2
         run: |
-          ./gradlew test -Pmodule=report-ng-tests \
+          gradle test -Pmodule=report-ng-tests \
             -Pargs="-PpretestExtended=true" \
             -PtestName="PreTest ReportNG 2" \
             -PoutputDir="/src/test/resources/reports/report-extended-status"
