--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Prepare Status Tests
         run: |
-          ./gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -Dtt.report.dir=report-pretest-status -DwithJacoco
+          ./gradlew test -P pretest=true -D log4j2.configurationFile=src/test/resources/log4j2-pretest.xml
           mkdir -p integration-tests/report-pretest-status
           cp -r integration-tests/report-pretest-status/* integration-tests/report-pretest-status/
 
