--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -32,6 +32,11 @@ jobs:
           ../gradlew test -P pretest=true -D log4j2.configurationFile=src/test/resources/log4j2-pretest.xml
           mkdir -p integration-tests/report-pretest-status
           cp -r integration-tests/report-pretest-status/* integration-tests/report-pretest-status/
+      - name: Publish artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: testerra-report
+          path: integration-tests/test-report
 
       - name: Prepare Report Tests 1
         if: always()
@@ -48,10 +53,3 @@ jobs:
           ../gradlew test -P pretestExtended=true
           mkdir -p report-ng-tests/src/test/resources/reports/report-extended-status
           cp -r report-ng-tests/src/test/resources/reports/report-extended-status/* report-ng-tests/src/test/resources/reports/report-extended-status/
-
-      - name: Run Tests
-        if: always()
-        run: |
-          ./gradlew clean test
-      - name: Last step
-        run: echo "End of workflow!"
