--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -3,6 +3,10 @@ on: push
 jobs:
   test-testerra:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        gradle-task: [ 'check' ]
     steps:
       - name: First step
         run: echo "Hello World!"
@@ -13,58 +17,29 @@ jobs:
         with:
           distribution: 'zulu'
           cache: 'gradle'
-          java-version: '17'
+          java-version: '11'
       - name: Setup NodeJS
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
       - name: Setup Chrome
         uses: browser-actions/setup-chrome@latest
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Build Testerra
         run: |
           ls -la
           ./gradlew clean compileJava compileTestJava buildReport
 
       - name: Prepare Status Tests
-        if: always()
         run: |
           cd integration-tests
           ../gradlew test -P pretest=true -D log4j2.configurationFile=src/test/resources/log4j2-pretest.xml
           mkdir -p integration-tests/report-pretest-status
           cp -r integration-tests/report-pretest-status/* integration-tests/report-pretest-status/
       - name: Publish artifacts
-        if: always()
+        run: pwd
         uses: actions/upload-artifact@v4
         with:
           name: report-pretest-status
           path: integration-tests/test-report
-
-      - name: Prepare Report Tests 1
-        if: always()
-        run: |
-          cd report-ng-tests
-          ../gradlew test -P pretest=true
-          mkdir -p report-ng-tests/src/test/resources/reports/report-generated-status
-          cp -r report-ng-tests/src/test/resources/reports/report-generated-status/* report-ng-tests/src/test/resources/reports/report-generated-status/
-      - name: Publish artifacts
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: report-test
-          path: report-ng-tests/test-report
-
-      - name: Prepare Report Tests 2
-        if: always()
-        run: |
-          cd report-ng-tests
-          ../gradlew test -P pretestExtended=true
-          mkdir -p report-ng-tests/src/test/resources/reports/report-extended-status
-          cp -r report-ng-tests/src/test/resources/reports/report-extended-status/* report-ng-tests/src/test/resources/reports/report-extended-status/
-      - name: Publish artifacts
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: report-test-2
-          path: report-ng-tests/test-report
