--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -37,8 +37,9 @@ jobs:
           ../gradlew test -P pretest=true -D log4j2.configurationFile=src/test/resources/log4j2-pretest.xml
           mkdir -p integration-tests/report-pretest-status
           cp -r integration-tests/report-pretest-status/* integration-tests/report-pretest-status/
-      - name: Publish artifacts
+      - name: Info
         run: pwd
+      - name: Publish artifacts
         uses: actions/upload-artifact@v4
         with:
           name: report-pretest-status
