--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -28,9 +28,7 @@ jobs:
       - name: Prepare Status Tests
         run: |
           cd integration-tests
-          sudo ../gradlew test -P pretest=true -D log4j2.configurationFile=src/test/resources/log4j2-pretest.xml
-          mkdir -p integration-tests/report-pretest-status
-          cp -r integration-tests/report-pretest-status/* integration-tests/report-pretest-status/
+          sudo ../gradlew test -P pretest=true -D log4j2.configurationFile=src/test/resources/log4j2-pretest.xml -D tt.report.dir=report-pretest-status -D withJacoco
       - name: Info
         if: always()
         run: pwd
