--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -29,6 +29,8 @@ jobs:
         run: |
           cd integration-tests
           sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -Dtt.report.dir=report-pretest-status -DwithJacoco
+          mkdir -p report-pretest-status
+          cp -r report-pretest-status/* report-pretest-status/
       - name: Info
         if: always()
         run: pwd
