--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -23,12 +23,17 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Build Testerra
-        run: ./gradlew clean compileJava compileTestJava buildReport
+        run: ./gradlew clean compileJava compileTestJava buildReport >/dev/null || true
 
       - name: Prepare Status Tests
         run: |
           cd integration-tests
-          sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -Dtt.report.dir=report-pretest-status -DwithJacoco
+          sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -DwithJacoco
+          cd ..
+          pwd
+          mkdir -p integration-tests/report-pretest-status
+          cp -r integration-tests/test-report/* integration-tests/report-pretest-status/
+
       - name: Info
         if: always()
         run: pwd
@@ -37,4 +42,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: report-pretest-status
-          path: integration-tests/report-pretest-status
+          path: integration-tests/test-report
