--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -51,3 +51,47 @@ jobs:
           path: report-ng-tests/src/test/resources/reports/report-extended-status
 
 
+      - name: Run Tests - Testerra Integration tests
+        run: |
+          cd integration-tests
+          sudo ../gradlew clean test
+          sudo chmod -R a+r test-report/*
+      - name: Publish artifacts - Testerra Integration tests
+        uses: actions/upload-artifact@v4
+        with:
+          name: Testerra Integration tests
+          path: integration-tests/test-report
+
+      - name: Run Tests - Testerra MailConnector
+        run: |
+          cd mail-connector
+          sudo ../gradlew clean test
+          sudo chmod -R a+r test-report/*
+      - name: Publish artifacts - Testerra MailConnector
+        uses: actions/upload-artifact@v4
+        with:
+          name: Testerra MailConnector
+          path: mail-connector/test-report
+
+      - name: Run Tests - Testerra BUP tests
+        run: |
+          cd bup
+          sudo ../gradlew clean test
+          sudo chmod -R a+r test-report/*
+      - name: Publish artifacts - Testerra BUP tests
+        uses: actions/upload-artifact@v4
+        with:
+          name: Testerra BUP tests
+          path: bup/test-report
+
+      - name: Run Tests - Testerra ReportNG tests
+        run: |
+          cd report-ng-tests
+          sudo ../gradlew clean test
+          sudo chmod -R a+r test-report/*
+      - name: Publish artifacts - Testerra ReportNG tests
+        uses: actions/upload-artifact@v4
+        with:
+          name: Testerra ReportNG tests
+          path: report-ng-tests/test-report
+
