--- a/.github/workflows/framework-test-2.yml
+++ b/.github/workflows/framework-test-2.yml
@@ -77,6 +77,17 @@ jobs:
       - name: Build Testerra
         run: ./gradlew clean compileJava compileTestJava buildReport
 
+      - name: Prepare Status Tests
+        run: |
+          cd integration-tests
+          sudo ../gradlew test -Ppretest=true -Dlog4j2.configurationFile=src/test/resources/log4j2-pretest.xml -DwithJacoco
+          sudo chmod -R a+r test-report/*
+      - name: Publish artifacts - Prepare Status Tests
+        uses: actions/upload-artifact@v4
+        with:
+          name: PreTest Status
+          path: integration-tests/test-report
+
 
       - name: Run Tests - Testerra Integration tests
         run: |
